implement reservations
